<resources>
    <string name="app_name" translatable="false">Baseball Softball Lineups Keeper</string>
    <string name="splashscreen_title" translatable="false">Baseball softball\nlineups Keeper6</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="action_report_issue">Report an issue</string>
    <string name="new_lineup_tab_field_defense">Defense</string>
    <string name="new_lineup_tab_field_offense">Offense</string>
    <string name="new_lineup_substitute_label">Substitutes</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="dialog_create_lineup_title">Creation&#8230;</string>
    <string name="dialog_create_lineup_name">Title</string>
    <string name="dialog_create_lineup_tournament">Tournament</string>
    <string name="dialog_error_select_tournament_first_message">Please select or create a tournament first</string>
    <string name="player_hint_name">Name</string>
    <string name="player_hint_shirt_number">Shirt number</string>
    <string name="player_hint_license_number">License number</string>
    <string name="player_hint_license_number_short">License N°</string>
    <string name="player_hint_email">Email</string>
    <string name="player_hint_phone">Phone number</string>
    <string name="title_last_lineup">Dashboard</string>
    <string name="title_team">Roster</string>
    <string name="title_lineups">My Lineups</string>
    <string name="title_settings">Settings</string>
    <string name="title_tournament_summary">Summary</string>
    <string name="title_player_details">Statistics</string>
    <string name="title_player_edition">Player edition</string>
    <string name="title_team_details">Team details</string>
    <string name="title_lineup_roster">Roster edition</string>
    <string name="team_creation_error_name_empty">Team name cannot be empty</string>
    <string name="player_creation_error_name_empty">Player name cannot be empty</string>
    <string name="player_creation_error_invalid_email_format">Invalid email format</string>
    <string name="player_creation_error_invalid_phone_format">Invalid phone number format</string>
    <string name="lineup_creation_error_name_empty">Lineup name cannot be empty</string>
    <string name="lineup_creation_error_tournament_empty">Tournament name cannot be empty</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="dialog_delete_team_title">Delete team %s ?</string>
    <string name="dialog_delete_lineup_title">Delete lineup ?</string>
    <string name="dialog_delete_player_title">Delete player ?</string>
    <string name="dialog_delete_tournament_title">Delete tournament %s ?</string>
    <string name="dialog_delete_position_title">Delete position ?</string>
    <string name="dialog_delete_cannot_undo_message">This action cannot be undo, are you sure ?</string>
    <string name="dialog_delete_progress_message">Deleting&#8230;</string>
    <string name="tile_team_size_warning_message">Not enough players to have a complete team!</string>
    <string name="tile_most_used_player_header">Most used player</string>
    <string name="tile_most_used_player_games_played">Games played</string>
    <string name="tile_last_lineup_header">Last lineup</string>
    <string name="header_batting_order_player_name">Player name</string>
    <string name="header_batting_order_player_shirt">N°</string>
    <string name="header_batting_order_player_position">Pos.</string>
    <string name="form_lineup_creation_date_label">Date</string>
    <string name="form_lineup_creation_roster_label">Roster</string>
    <string name="lineup_list_filter_unfocused_hint">Filter name</string>
    <string name="shake_beta_title">Any problem ?</string>
    <string name="shake_beta_description">Shake your phone or click here to send a report</string>
    <string name="field_position_dp" translatable="false">DP</string>
    <string name="field_position_dh" translatable="false">DH</string>
    <string name="field_position_flex" translatable="false">FLEX</string>
    <string name="field_position_pitcher" translatable="false">PITCHER</string>
    <string name="action_add_dp_flex">Use DP/Flex</string>
    <string name="action_add_dh">Use DH</string>
    <string name="tournaments_summary_header" translatable="false">%1$s / %2$s</string>
    <plurals name="tournaments_quantity">
        <item quantity="one">%d tournament</item>
        <item quantity="other">%d tournaments</item>
    </plurals>
    <plurals name="lineups_quantity">
        <item quantity="one">%d lineup</item>
        <item quantity="other">%d lineups</item>
    </plurals>
    <string name="players_list_empty">No player available</string>
    <string name="share_lineup_subject">Here is the lineup of: %s</string>
    <string name="team_list_empty_text">Once you create a team, you’ll see it listed here</string>
    <string name="team_list_dialog_title">Your teams</string>
    <string name="team_list_dialog_create">Create</string>
    <string name="roster_size_status_all">All players</string>
    <plurals name="roster_size_status_selection">
        <item quantity="one">%d player</item>
        <item quantity="other">%d players</item>
    </plurals>
    <string name="feature_manage_teams_title">Manage your teams</string>
    <string name="feature_manage_teams_description">Click here to access a menu to let you create and change the main team</string>
    <string name="feature_roster_title">Setup your roster</string>
    <string name="feature_roster_description">You can now change players who will play the game!</string>
    <string name="roster_list_player_dialog_title">List of all team players</string>
    <plurals name="team_details_team_size">
        <item quantity="one">Your team is composed of %d member</item>
        <item quantity="other">Your team is composed of %d members</item>
    </plurals>
    <string name="setting_lineup_style_description">Lineup font</string>
    <string name="setting_men_style_description">Men</string>
    <string name="setting_women_style_description">Women</string>
    <string name="setting_day_night_style_description">Theme</string>
    <string name="setting_category_about_title">About</string>
    <string name="setting_import_data_description">Import data from file</string>
    <string name="setting_import_data_update_object_description">Update data if already exists ?</string>
    <string name="setting_export_data_description">Export data to file</string>
    <string name="setting_delete_data_description">Delete all data</string>
    <string name="setting_version_title">Version</string>
    <string name="setting_licenses_title">Licenses</string>
    <string name="setting_play_store_title">Google Play Store official page</string>
    <string name="key_lineup_style" translatable="false">key_lineup_style</string>
    <string name="key_men_style" translatable="false">key_men_style</string>
    <string name="key_women_style" translatable="false">key_women_style</string>
    <string name="key_day_night_theme" translatable="false">key_day_night_theme</string>
    <string name="key_export_data" translatable="false">key_export_data</string>
    <string name="key_import_data" translatable="false">key_import_data</string>
    <string name="key_import_data_update_object" translatable="false">key_import_data_update_object</string>
    <string name="key_delete_data" translatable="false">key_delete_data</string>
    <string name="key_app_version" translatable="false">key_app_version</string>
    <string name="key_app_licenses" translatable="false">key_app_licenses</string>
    <string name="key_play_store" translatable="false">key_play_store</string>
    <string name="login_create">Create your first team</string>
    <string name="login_import">Import an existing team</string>
    <string name="settings_category_style">Style</string>
    <string name="settings_category_data">Data</string>
    <string name="settings_category_support">Support</string>
    <string name="link_dp_and_flex_dialog_title">Link your DP and your Flex</string>
    <string name="link_dh_and_pitcher_dialog_title">Link your DH and your Pitcher</string>
    <string name="discard_message">Are you sure you really want to discard ? You will loose all your modifications.</string>
    <string name="discard_title">Discard modifications ?</string>
    <string name="generic_discard">Discard</string>
    <string name="settings_export_error_title">Cannot export</string>
    <string name="settings_import_error_title">Cannot import</string>
    <string name="settings_export_error_message">Something wrong happened during export. Please try again and check if the application has access to the external storage. </string>
    <string name="settings_import_error_message">Something wrong happened during import. Please try again and check if the application has access to the external storage. </string>
    <string name="error_need_assign_pitcher_first_title">Not saved</string>
    <string name="error_need_assign_both_players_title">Not saved</string>
    <string name="error_need_assign_pitcher_first_message">Please select your pitcher first</string>
    <string name="error_need_assign_both_players_message">Please select both your DP and Flex</string>
    <string name="error_when_deleting_lineup">"Something wrong happened when deleting lineup"</string>
    <string name="create_player_favorite_positions">Favorite positions: (Max 3)</string>
    <string name="create_player_pitching_side">Pitching</string>
    <string name="create_player_batting_side">Batting</string>
    <string name="create_player_sex">Sex</string>
    <string name="generic_left">Left</string>
    <string name="generic_right">Right</string>
    <string name="generic_both">Both</string>
    <string name="generic_unknown">Unknown</string>
    <string name="settings_export_success_title">Success</string>
    <string name="settings_export_success_message">Successfully exported to external storage in the directory %s </string>
    <string name="settings_import_success_title">Success</string>
    <string name="settings_import_success_message">Successfully imported data into the application</string>
    <plurals name="lineups_substitutes_size">
        <item quantity="one">Substitute: %d</item>
        <item quantity="other">Substitutes: %d</item>
    </plurals>
    <string name="dashboard_edit_mode">Dashboard edit mode</string>
    <string name="tile_last_player_number_message">Shirt N° history</string>
    <string name="tile_last_player_number_label_last">Last:</string>
    <string name="lineup_style_normal_label">Normal</string>
    <string name="lineup_style_hand_writing_label">Hand writing</string>
    <string name="lineup_style_default_value" translatable="false">0</string>
    <string name="lineup_theme_default_value" translatable="false">0</string>
    <string name="lineup_theme_system_value">System</string>
    <string name="lineup_theme_day_value">Day</string>
    <string name="lineup_theme_night_value">Night</string>
    <string name="generic_not_found">Not found</string>
    <string name="tile_team_size_send_text_message">Text message</string>
    <string name="tile_team_size_send_email">Email</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_shirt_number">Shirt n°</string>
    <string name="display_grid">Grid</string>
    <string name="picker_men_summary">Change men color on field</string>
    <string name="picker_women_summary">Change women color on field</string>
    <string name="form_tournament_creation_start_label">Start</string>
    <string name="form_tournament_creation_end_label">End</string>
    <string name="form_tournament_creation_address">Address (optional)</string>
    <string name="form_tournament_creation_name">Name</string>
</resources>