<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_category_style">

        <ListPreference
            android:defaultValue="@string/lineup_style_default_value"
            android:entries="@array/pref_lineup_font_style_labels"
            android:entryValues="@array/pref_lineup_font_style_values"
            android:key="@string/key_lineup_style"
            android:title="@string/setting_lineup_style_description"
            app:useSimpleSummaryProvider="true" />

        <com.skydoves.colorpickerpreference.ColorPickerPreference
            android:key="@string/key_men_style"
            android:title="@string/setting_men_style_description"
            app:preference_colorBox_radius="8dp"
            app:preference_dialog_positive="@android:string/ok"
            app:default_color="@color/default_men_color"
            android:summary="@string/picker_men_summary" />

        <com.skydoves.colorpickerpreference.ColorPickerPreference
            android:key="@string/key_women_style"
            android:title="@string/setting_women_style_description"
            app:preference_colorBox_radius="8dp"
            app:preference_dialog_positive="@android:string/ok"
            app:default_color="@color/default_women_color"
            android:summary="@string/picker_women_summary"/>

        <ListPreference
            android:defaultValue="@string/lineup_theme_default_value"
            android:entries="@array/pref_theme_style_labels"
            android:entryValues="@array/pref_theme_style_values"
            android:key="@string/key_day_night_theme"
            android:title="@string/setting_day_night_style_description"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_category_data">

        <Preference
            app:title="@string/setting_export_data_description"
            app:key="@string/key_export_data"/>

        <Preference
            app:title="@string/setting_import_data_description"
            app:key="@string/key_import_data"/>

        <CheckBoxPreference
            android:defaultValue="false"
            app:singleLineTitle="false"
            android:key="@string/key_import_data_update_object"
            android:title="@string/setting_import_data_update_object_description"/>

        <Preference
            app:title="@string/setting_delete_data_description"
            app:key="@string/key_delete_data"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_category_support">
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/bug_report_trigger"
            android:entryValues="@array/bug_report_trigger_values"
            android:key="@string/key_bug_report_trigger"
            android:title="@string/setting_bug_report_trigger_description"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/setting_category_about_title">

        <Preference
            app:title="@string/setting_version_title"
            app:key="@string/key_app_version"/>

        <Preference
            app:title="@string/setting_licenses_title"
            app:key="@string/key_app_licenses"/>

        <Preference
            app:title="@string/setting_play_store_title"
            app:key="@string/key_play_store"/>

    </PreferenceCategory>

</PreferenceScreen>
