<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.telen.easylineup.currentLineup.DashboardFragment"
        android:label="@string/title_last_lineup"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_lineups"
        android:name="com.telen.easylineup.lineup.list.TournamentListFragment"
        android:label="@string/title_lineups"
        tools:layout="@layout/fragment_list_tournaments"/>

    <fragment
        android:id="@+id/navigation_team"
        android:name="com.telen.easylineup.team.TeamFragment"
        android:label="@string/title_team"
        tools:layout="@layout/fragment_player_list"/>

    <fragment
        android:id="@+id/playerDetailsFragment"
        android:name="com.telen.easylineup.player.PlayersDetailsContainerFragment"
        android:label="@string/title_player_details"
        tools:layout="@layout/fragment_players_details_container"/>

    <fragment
        android:id="@+id/playerEditFragment"
        android:name="com.telen.easylineup.player.PlayerEditFragment"
        android:label="@string/title_player_edition"
        tools:layout="@layout/fragment_player_edit"/>

    <fragment
        android:id="@+id/lineupFragment"
        android:name="com.telen.easylineup.lineup.LineupFragment"
        android:label="@string/title_lineups"
        tools:layout="@layout/fragment_lineup_fixed"/>

    <fragment
        android:id="@+id/lineupCreationFragment"
        android:name="com.telen.easylineup.lineup.create.LineupCreationFragment"
        android:label="@string/dialog_create_lineup_title"
        tools:layout="@layout/fragment_lineup_creation"/>

    <fragment
        android:id="@+id/teamDetailsFragment"
        android:name="com.telen.easylineup.team.details.TeamDetailsFragment"
        android:label="@string/title_team_details"
        tools:layout="@layout/fragment_team_details"/>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.telen.easylineup.settings.SettingsFragment"
        android:label="@string/title_settings" />

    <fragment
        android:id="@+id/tournamentStatisticsTableFragment"
        android:name="com.telen.easylineup.lineup.statistics.TournamentStatisticsTableFragment"
        android:label="@string/title_tournament_summary"
        tools:layout="@layout/view_table_multi_scroll"/>

</navigation>