<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" android:id="@+id/group_management">
        <item android:id="@+id/navigation_home"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_last_lineup"/>

        <item android:id="@+id/navigation_team"
            android:icon="@drawable/ic_team"
            android:title="@string/title_team"/>

        <item android:id="@+id/navigation_lineups"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/title_lineups"/>
    </group>

    <group android:checkableBehavior="single" android:id="@+id/group_utils">
        <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/title_settings" />
    </group>

</menu>
