<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/formContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_tournament_creation_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameInput"
                    android:inputType="textPersonName"
                    tools:text="The tournament name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/lineup_creation_field_size"
                android:padding="@dimen/default_margin">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/startTournamentLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/startTournamentValue"
                    android:text="@string/form_tournament_creation_start_label"
                    android:gravity="center_vertical"
                    android:textStyle="bold|italic"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/startTournamentValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/startTournamentLabel"
                    tools:text="01/10/2020"
                    android:gravity="center_vertical"
                    android:textStyle="bold"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/lineup_creation_field_size"
                android:padding="@dimen/default_margin">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/endTournamentLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/endTournamentValue"
                    android:text="@string/form_tournament_creation_end_label"
                    android:gravity="center_vertical"
                    android:textStyle="bold|italic"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/endTournamentValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/endTournamentLabel"
                    tools:text="01/10/2020"
                    android:gravity="center_vertical"
                    android:textStyle="bold"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tournamentAddressLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_tournament_creation_address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tournamentAddressInput"
                    android:inputType="textPersonName"
                    tools:text="The tournament address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>