<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/actions_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_height="50dp"
                android:layout_margin="8dp"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Assist"
                    android:id="@+id/display_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:chipIcon="@drawable/ic_baseline_grid_view_24"
                    android:text="@string/display_grid"/>

                <HorizontalScrollView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/display_mode"
                    android:layout_marginEnd="8dp">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/sort_group"
                        android:layout_height="match_parent"
                        android:layout_width="wrap_content"
                        app:singleSelection="true"
                        app:selectionRequired="true"
                        app:singleLine="true"
                        android:layout_gravity="end">

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.Material3.Chip.Filter"
                            android:id="@+id/sort_by_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sort_by_name"
                            android:checked="true"/>

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.Material3.Chip.Filter"
                            android:id="@+id/sort_by_shirt_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sort_by_shirt_number" />

                    </com.google.android.material.chip.ChipGroup>

                </HorizontalScrollView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/teamPlayersRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scrollbars="vertical"
                app:layout_constraintTop_toBottomOf="@+id/actions_list"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:listitem="@layout/item_players_list"
                tools:itemCount="20" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/default_margin"
            android:src="@drawable/ic_add_white_24dp" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>